--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>My GitHub Page</title>
+  <meta http-equiv="refresh" content="0; url=prot.html">
 </head>
 <body>
-  <h1>เว็บกูขึ้นแล้ว 🎉</h1>
-  <p>นี่คือ GitHub Pages</p>
 </body>
 </html>
